--- a/2024_Task_04鐵達尼號存活預測專題實作_特徵優化分析.ipynb
+++ b/2024_Task_04鐵達尼號存活預測專題實作_特徵優化分析.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMStO54NMxRPMUkenDjfvW7",
+      "authorship_tag": "ABX9TyMn3Cu7g0Yz1jkVMMp8vhJq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 475
         },
         "id": "HF0QuYMPS7Jd",
-        "outputId": "de5c39d2-30dd-47e3-939d-5ffe695549ac"
+        "outputId": "df577679-354d-4c09-ab49-5e64abbac12e"
       },
       "outputs": [
         {
@@ -85,7 +85,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8838ff64-b57b-481f-b277-1f36a6377065\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-02d64c59-9ae7-4883-865b-2925493c01c2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -291,7 +291,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8838ff64-b57b-481f-b277-1f36a6377065')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-02d64c59-9ae7-4883-865b-2925493c01c2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -343,12 +343,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8838ff64-b57b-481f-b277-1f36a6377065 button.colab-df-convert');\n",
+              "        document.querySelector('#df-02d64c59-9ae7-4883-865b-2925493c01c2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8838ff64-b57b-481f-b277-1f36a6377065');\n",
+              "        const element = document.querySelector('#df-02d64c59-9ae7-4883-865b-2925493c01c2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -368,8 +368,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2890866f-023b-4ddd-b220-2ff1e86866c1\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2890866f-023b-4ddd-b220-2ff1e86866c1')\"\n",
+              "<div id=\"df-276e250e-e374-46d5-b90d-8620b1e41268\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-276e250e-e374-46d5-b90d-8620b1e41268')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -488,14 +488,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2890866f-023b-4ddd-b220-2ff1e86866c1 button');\n",
+              "        document.querySelector('#df-276e250e-e374-46d5-b90d-8620b1e41268 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_cd5f934c-3ece-4d86-9051-1185d88e33ad\">\n",
+              "  <div id=\"id_cc26caa9-c56c-46d9-877e-bfbadb97412b\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -539,7 +539,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_cd5f934c-3ece-4d86-9051-1185d88e33ad button.colab-df-generate');\n",
+              "        document.querySelector('#id_cc26caa9-c56c-46d9-877e-bfbadb97412b button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1401,7 +1401,7 @@
           "height": 300
         },
         "id": "9qiImIAU9I-I",
-        "outputId": "24acb96b-4708-4812-9cb0-97a2a1b06560"
+        "outputId": "f8445a55-a62a-4ce2-a9d5-cbeb592abfbb"
       },
       "execution_count": 4,
       "outputs": [
@@ -1421,7 +1421,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2b01dcb6-2a1a-4678-8e77-3c14a3527902\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ff2f4474-eb84-46d5-8952-79154e956bb5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1509,7 +1509,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2b01dcb6-2a1a-4678-8e77-3c14a3527902')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ff2f4474-eb84-46d5-8952-79154e956bb5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1561,12 +1561,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2b01dcb6-2a1a-4678-8e77-3c14a3527902 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ff2f4474-eb84-46d5-8952-79154e956bb5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2b01dcb6-2a1a-4678-8e77-3c14a3527902');\n",
+              "        const element = document.querySelector('#df-ff2f4474-eb84-46d5-8952-79154e956bb5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1586,8 +1586,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e7f2f4b1-e9d6-4a46-bed4-81e30e6f0b4d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e7f2f4b1-e9d6-4a46-bed4-81e30e6f0b4d')\"\n",
+              "<div id=\"df-4335267c-66e6-43e7-a279-097189b1ec71\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4335267c-66e6-43e7-a279-097189b1ec71')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1706,7 +1706,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e7f2f4b1-e9d6-4a46-bed4-81e30e6f0b4d button');\n",
+              "        document.querySelector('#df-4335267c-66e6-43e7-a279-097189b1ec71 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1753,7 +1753,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "toj1VuQ_EtKt",
-        "outputId": "cadc82e2-f100-43fb-c89d-47aa2b46b054"
+        "outputId": "52a9b5b0-fd35-4132-e21c-25f2a0a9d857"
       },
       "execution_count": 5,
       "outputs": [
@@ -1810,7 +1810,7 @@
           "height": 1000
         },
         "id": "MnQaMZFqE00l",
-        "outputId": "ebf4f537-60b8-4245-9d8e-274195d043c6"
+        "outputId": "6954624c-3eef-4f1e-894e-cc2ebb645537"
       },
       "execution_count": 6,
       "outputs": [
@@ -1828,7 +1828,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.FacetGrid at 0x79895e867130>"
+              "<seaborn.axisgrid.FacetGrid at 0x7d3101cbfd00>"
             ]
           },
           "metadata": {},
@@ -1878,7 +1878,7 @@
         "family['FamilyLarge']  = family['FamilySize'].map(lambda s : 1 if 2 <= s <= 4 else 0)\n",
         "\n",
         "# Comparing the results\n",
-        "\n",
+        "family = family.loc[:,['FamilySingle','FamilySmall','FamilyLarge']]\n",
         "print(family.head())"
       ],
       "metadata": {
@@ -1886,70 +1886,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oIG5AQ6DMQjM",
-        "outputId": "8b016918-8c8a-47b0-8ae5-ca45750bd63b"
+        "outputId": "e270de7f-1ba2-4577-f30e-68789ee8a52e"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   Survived  Pclass                                               Name  Sex  \\\n",
-            "0         0       3                            Braund, Mr. Owen Harris    1   \n",
-            "1         1       1  Cumings, Mrs. John Bradley (Florence Briggs Th...    0   \n",
-            "2         1       3                             Heikkinen, Miss. Laina    0   \n",
-            "3         1       1       Futrelle, Mrs. Jacques Heath (Lily May Peel)    0   \n",
-            "4         0       3                           Allen, Mr. William Henry    1   \n",
-            "\n",
-            "    Age  SibSp  Parch            Ticket     Fare Embarked  Embarked_C  \\\n",
-            "0  22.0      1      0         A/5 21171   7.2500        S           0   \n",
-            "1  38.0      1      0          PC 17599  71.2833        C           1   \n",
-            "2  26.0      0      0  STON/O2. 3101282   7.9250        S           0   \n",
-            "3  35.0      1      0            113803  53.1000        S           0   \n",
-            "4  35.0      0      0            373450   8.0500        S           0   \n",
-            "\n",
-            "   Embarked_Q  Embarked_S  Pclass_1  Pclass_2  Pclass_3  FamilySize  \\\n",
-            "0           0           1         0         0         1           2   \n",
-            "1           0           0         1         0         0           2   \n",
-            "2           0           1         0         0         1           1   \n",
-            "3           0           1         1         0         0           2   \n",
-            "4           0           1         0         0         1           1   \n",
-            "\n",
-            "   FamilySingle  FamilySmall  FamilyLarge  \n",
-            "0             0            1            1  \n",
-            "1             0            1            1  \n",
-            "2             1            0            0  \n",
-            "3             0            1            1  \n",
-            "4             1            0            0  \n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "# 定義family函數，家族人數在2~4個，定義為small;家族人數超過5個定義為large\n",
-        "family = df_clean.copy()\n",
-        "\n",
-        "family['FamilySize'] = family['SibSp'] + family['Parch'] + 1\n",
-        "family['FamilySingle'] = family['FamilySize'].map(lambda s : 1 if s == 1 else 0)\n",
-        "family['FamilySmall']  = family['FamilySize'].map(lambda s : 1 if 2 <= s <= 4 else 0)\n",
-        "family['FamilyLarge']  = family['FamilySize'].map(lambda s : 1 if 2 <= s <= 4 else 0)\n",
-        "\n",
-        "# Comparing the results\n",
-        "family = family.loc[:,['FamilySingle','FamilySmall','FamilyLarge']]\n",
-        "\n",
-        "print(family.head())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "80abb213-621e-4c68-c16f-302cba7827f0",
-        "id": "uy11PjaTesc9"
-      },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
